# marty_football

./: README.md
ball_following/: CMakeLists.txt  package.xml
ball_following/cfg/: dyn_param.cfg  parameters.cfg
ball_following/include/ball_following/: ball_follower.hpp
ball_following/launch/: apriltag.launch  follower.launch  football.launch  track_and_tag.launch  tracker.launch
ball_following/src/: ball_follower.cpp  ball_tracker.cpp
