<?xml version="1.0"?>
<package>
  <name>ball_following</name>
  <version>0.0.0</version>
  <description>The ball_following package</description>

  <maintainer email="alex.bordallo@robotical.io">Alejandro Bordallo</maintainer>

  <license>Apache</license>

  <!-- <url type="website">http://wiki.ros.org/ros_marty</url> -->
  <url type="website">http://robotical.io/</url>

  <author email="alex.bordallo@robotical.io">Alejandro Bordallo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>marty_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>marty_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
